# libsprite

./: .gitignore  README.md  configure.ac
projects/xcode/libsprite.xcodeproj/: project.pbxproj
projects/xcode/libsprite.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
projects/xcode/libsprite.xcodeproj/project.xcworkspace/xcshareddata/: libsprite.xccheckout
projects/xcode/libsprite.xcodeproj/project.xcworkspace/xcuserdata/manvscode.xcuserdatad/: UserInterfaceState.xcuserstate
projects/xcode/libsprite.xcodeproj/xcuserdata/manvscode.xcuserdatad/xcschemes/: libsprite.xcscheme  xcschememanagement.plist
src/: Makefile  Makefile.am  imageio.c  imageio.h  libsprite-config.h  libsprite-config.h.in  sprc.c  sprite-mem.c  sprite-mem.h  sprite-player.c  sprite-state-machine.c  sprite-state-machine.h  sprite.c  sprite.h  stamp-h1  texture-packer.c  texture-packer.h
tests/: Makefile.am  export-robot.sh  robot.spr  sprc.c  sprite-1.0.fs  sprite-1.0.vs  sprite-shader.f.glsl  sprite-shader.v.glsl  test-export.sh  test-sprite.c  test-texture-packing.c  troll.tga
tests/robot/: climb0.tga  climb1.tga  climb2.tga  climb3.tga  jump0.tga  jump1.tga  jump2.tga  running0.tga  running1.tga  running2.tga  walk0.tga  walk1.tga  walk2.tga  walk3.tga
