
# Add new files in alphabetical order. Thanks.
libsprite_src = imageio.c texture-packer.c 

# Add new files in alphabetical order. Thanks.
libsprite_headers = imageio.h texture-packer.h

library_includedir      = $(includedir)/libsprite/
library_include_HEADERS = $(libsprite_headers)

# Library
lib_LTLIBRARIES                          = $(top_builddir)/lib/libsprite.la 
__top_builddir__lib_libsprite_la_SOURCES = $(libsprite_src)
__top_builddir__lib_libsprite_la_LIBADD  = -lcollections

